@@ -5,4 +5,3 @@
 	Locale Support
 	Make Buddy Chat Prettier
 	Icons for buddy list (I forget what this was)
-	Make per-conversation colour dialogs
